--- a/mapflow/dialogs/static/ui/login_dialog.ui
+++ b/mapflow/dialogs/static/ui/login_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>360</width>
-    <height>214</height>
+    <height>219</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,8 +24,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>360</width>
-    <height>219</height>
+    <width>400</width>
+    <height>326</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -33,7 +33,42 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QLabel" name="invalidToken">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Authorization is not configured! &lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;br/&gt;Setup authorization config &lt;br/&gt;and restart QGIS before login. &lt;br/&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow.html#oauth2_setup&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#094fd1;&quot;&gt;See documentation for help &lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="labelPassword">
+       <property name="text">
+        <string>Token</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="QgsPasswordLineEdit" name="token">
        <property name="toolTip">
@@ -44,13 +79,6 @@
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="labelPassword">
-       <property name="text">
-        <string>Token</string>
        </property>
       </widget>
      </item>
@@ -73,10 +101,17 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="layoutButtons" stretch="0,0,0">
+    <layout class="QHBoxLayout" name="layoutButtons" stretch="0,0,0,0">
      <property name="topMargin">
       <number>15</number>
      </property>
+     <item>
+      <widget class="QCheckBox" name="useOauth">
+       <property name="text">
+        <string>Use Oauth2</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="spacerButtons">
        <property name="orientation">
