Add projects comboBox to settnigs; store prrocessings for every projects separately

--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1786,6 +1786,9 @@
                  </property>
                 </spacer>
                </item>
+               <item>
+                <widget class="QComboBox" name="projectsCombo"/>
+               </item>
               </layout>
              </item>
             </layout>
