path, renamings and other changes from comments

--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -937,9 +937,9 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="saveAoiButton">
+              <widget class="QPushButton" name="downloadAoiButton">
                <property name="text">
-                <string>Save area</string>
+                <string>Download AOI</string>
                </property>
               </widget>
              </item>
