--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -142,10 +142,10 @@
            <property name="maxVisibleItems">
             <number>30</number>
            </property>
-           <property name="allowEmptyLayer">
+           <property name="allowEmptyLayer" stdset="0">
             <bool>false</bool>
            </property>
-           <property name="showCrs">
+           <property name="showCrs" stdset="0">
             <bool>true</bool>
            </property>
           </widget>
@@ -252,10 +252,10 @@
              <height>16777215</height>
             </size>
            </property>
-           <property name="showCrs">
+           <property name="showCrs" stdset="0">
             <bool>true</bool>
            </property>
-           <property name="excludedProviders">
+           <property name="excludedProviders" stdset="0">
             <stringlist notr="true">
              <string>wms</string>
              <string>postgresraster</string>
@@ -1260,7 +1260,7 @@
                 <property name="checked">
                  <bool>false</bool>
                 </property>
-                <property name="collapsed">
+                <property name="collapsed" stdset="0">
                  <bool>true</bool>
                 </property>
                 <layout class="QGridLayout" name="layoutMetadataFilters" columnstretch="0,1,0">
@@ -1563,7 +1563,94 @@
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="projectsCombo"/>
+                <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="1,0">
+                 <property name="spacing">
+                  <number>-1</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QComboBox" name="projectsCombo">
+                   <property name="minimumSize">
+                    <size>
+                     <width>200</width>
+                     <height>0</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>200</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <layout class="QHBoxLayout" name="horizontalLayout_12">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QPushButton" name="createProject">
+                     <property name="minimumSize">
+                      <size>
+                       <width>29</width>
+                       <height>29</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>29</width>
+                       <height>29</height>
+                      </size>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="deleteProject">
+                     <property name="minimumSize">
+                      <size>
+                       <width>29</width>
+                       <height>29</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>29</width>
+                       <height>29</height>
+                      </size>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="updateProject">
+                     <property name="minimumSize">
+                      <size>
+                       <width>29</width>
+                       <height>29</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>29</width>
+                       <height>29</height>
+                      </size>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </item>
+                </layout>
                </item>
                <item>
                 <widget class="QLabel" name="label_3">
@@ -1764,6 +1851,19 @@
                 </widget>
                </item>
               </layout>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_4">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_6">
