--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1502,7 +1502,7 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QPushButton" name="whatsThisButton">
+                  <widget class="QPushButton" name="imageInfoButton">
                    <property name="text">
                     <string>info</string>
                    </property>
