New version of 'image_preview_l' branch without conflicts

--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1495,7 +1495,7 @@
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_12">
                  <item>
-                  <widget class="QPushButton" name="pushButton">
+                  <widget class="QPushButton" name="imagePreviewButton">
                    <property name="text">
                     <string>preview</string>
                    </property>
