--- a/mapflow/dialogs/static/ui/mosaic_dialog.ui
+++ b/mapflow/dialogs/static/ui/mosaic_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>158</height>
+    <height>181</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,6 +39,16 @@
     <widget class="QLineEdit" name="mosaicTags">
      <property name="maxLength">
       <number>1024</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_3">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(128, 128, 128);</string>
+     </property>
+     <property name="text">
+      <string>Note: separate tags with comma (&quot;, &quot;) </string>
      </property>
     </widget>
    </item>
