--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -203,7 +203,7 @@
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,1,0">
+        <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,0,0">
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
@@ -233,34 +233,12 @@
           </widget>
          </item>
          <item>
-          <widget class="QgsMapLayerComboBox" name="rasterCombo">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
+          <widget class="QComboBox" name="sourceCombo">
            <property name="minimumSize">
             <size>
              <width>120</width>
-             <height>0</height>
+             <height>26</height>
             </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="showCrs">
-            <bool>true</bool>
-           </property>
-           <property name="excludedProviders">
-            <stringlist notr="true">
-             <string>wms</string>
-             <string>postgresraster</string>
-             <string>grassraster</string>
-            </stringlist>
            </property>
           </widget>
          </item>
